# aperture

./: .dockerignore  .env.example  .gitignore  Anchor.toml  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
_archive/risc0/: README.md
_archive/risc0/circuits/batch-aggregator/: Cargo.toml  README.md
_archive/risc0/circuits/payment-prover/host/: Cargo.toml
_archive/risc0/services/prover-service/: Cargo.toml  Dockerfile
_archive/risc0/services/prover-service/src/: main.rs
circuits/batch-aggregator/core/src/: lib.rs
circuits/batch-aggregator/host/: Cargo.toml
circuits/batch-aggregator/host/src/: lib.rs
circuits/batch-aggregator/methods/guest/: Cargo.toml
circuits/payment-prover/: .gitignore  Cargo.toml  README.md  hello.circom  package-lock.json  package.json  payment.circom
circuits/payment-prover/core/src/: lib.rs
circuits/payment-prover/host/src/: lib.rs
circuits/payment-prover/methods/guest/src/: main.rs
circuits/payment-prover/scripts/: generate_test_inputs.mjs
circuits/payment-prover/test-inputs/: bad_amount_exceeds_per_tx.json  bad_recipient_blocked.json  bad_token_not_whitelisted.json  ok_compliant.expected.json  ok_compliant.json
dashboard/: .dockerignore  .env.example  Dockerfile  components.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/public/: aperture-usdc-metadata.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/aip/: page.tsx
dashboard/src/app/api-docs/: page.tsx
dashboard/src/components/: PixelBlast.jsx
dashboard/src/hooks/: useOperatorId.ts
dashboard/src/lib/: aip-registry.ts  anchor-instructions.ts  api.ts  auth.ts  code-samples.ts  config.ts  light-protocol.ts  mpp-client.ts  use-wallet-auth.ts  utils.ts  x402-client.ts
dashboard/src/types/: css.d.ts
programs/policy-registry/: Cargo.toml  README.md
programs/policy-registry/src/: lib.rs
programs/transfer-hook/: Cargo.toml  README.md
programs/transfer-hook/src/: lib.rs
programs/verifier/: Cargo.toml  README.md
programs/verifier/src/: groth16_vk.rs  lib.rs
programs/verifier/src/instructions/: initialize_operator_state.rs  mod.rs  record_payment.rs  verify_batch.rs  verify_batch_v2.rs  verify_mpp_payment_proof.rs  verify_payment.rs  verify_payment_v2.rs  verify_payment_v2_with_transfer.rs
programs/verifier/src/state/: attestation_record.rs  compliance_status.rs  mod.rs  operator_state.rs  proof_record.rs
scripts/: create-compressed-mint.ts  create-vusdc.sh  debug-hook.ts  deploy.sh  dev-start.sh  init-extra-account-metas.ts  init-hook-v2.ts  init-hook-v3.ts  init-transfer-hook.ts  reinit-extra-metas.ts  setup-x402-alt.ts  test-compressed-mint.ts  test-hook-debug.ts  test-hook-final.ts  test-hook-real.ts  test-hook-v3.ts  test-onchain.ts  test-transfer-hook.ts
scripts/deploy/: DEPLOY.md
sdk/agent/: .env.example  package.json
sdk/agent/src/: agent.ts  mpp-payer.ts  policy-checker.ts  prover-client.ts  x402-payer.ts
sdk/mpp-adapter/: README.md  package.json  tsconfig.json
sdk/mpp-adapter/src/: adapter.ts  index.ts  interceptor.ts  types.ts
sdk/prover/: Cargo.toml  README.md
sdk/prover/src/: client.rs  error.rs  hasher.rs  lib.rs  types.rs
sdk/x402-adapter/: README.md  package.json
sdk/x402-adapter/src/: adapter.ts  index.ts  interceptor.ts  types.ts
services/agent-service/: Dockerfile  package.json
services/agent-service/src/: agent-loop.ts  anchor-helpers.ts  index.ts  openapi.ts
services/compliance-api/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
services/compliance-api/src/: bs58.d.ts  circomlibjs.d.ts  config.ts  index.ts  swagger.ts
services/policy-service/: .env.example  Dockerfile  README.md  package.json
services/policy-service/src/: config.ts  index.ts  swagger.ts
services/prover-service/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
services/prover-service/artifacts/: payment.wasm  payment.zkey  payment_vk.json
services/prover-service/scripts/: devnet-verify-test.mjs  extract-vk-rust.mjs  integration-test.mjs  tamper-test.mjs
services/prover-service/src/: convert.js  hash.js  index.js  main.rs  openapi.js  openapi.rs  prover.js  prover.rs
shared/types/: package.json
shared/types/src/: api.ts  attestation.ts  index.ts  payment.ts  policy.ts  solana.ts  time.ts
(+144 files in other folders)
