[workspace]
members = ["core", "host", "methods"]
exclude = ["methods/guest"]
resolver = "2"

[workspace.dependencies]
aperture-payment-prover-core = { path = "core" }
risc0-zkvm = { version = "1.2" }
risc0-build = { version = "1.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
