[package]
name = "transfer-hook"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
default = []
# Stub feature: this crate is native Solana (no anchor-lang dep) and emits no
# IDL. The flag exists only so `anchor build` does not abort the workspace
# pipeline when it iterates over every crate under programs/.
idl-build = []

[dependencies]
solana-program = "2.2"
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.8"
spl-token-2022 = { version = "7", features = ["no-entrypoint"] }
spl-type-length-value = "0.8"
borsh = { version = "1.5", features = ["derive"] }
