[package]
name = "aperture-prover"
version = "0.1.0"
edition = "2021"
description = "Aperture Prover Client - Interface layer between payment adapters and RISC Zero zkVM"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
