[package]
name = "aperture-prover-service"
version = "0.1.0"
edition = "2021"
description = "Aperture Prover Service - HTTP server wrapping RISC Zero zkVM for real ZK proof generation"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
risc0-zkvm = "1.2"
aperture-payment-prover-core = { path = "../../circuits/payment-prover/core" }
aperture-payment-prover-methods = { path = "../../circuits/payment-prover/methods" }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
